--- a/omp/tracer_omp.sh.in
+++ b/omp/tracer_omp.sh.in
@@ -66,7 +66,7 @@ trap ctrl_c INT
 
 if [ ! -z "$lttng_view" ]
 then
-  lttng view --viewer="babeltrace_omp --context --live" &
+  lttng view --viewer="babeltrace_thapi --backend omp --context --live" &
   PID=$!
 fi
 "$@"
