--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -135,7 +135,7 @@ bt2_all() {
     fi
 
     if [ -z "$timeline" ] && [ -z "$trace" ]; then
-        $bindir/babeltrace_thapi tally --backend <%= languages %> $bt_tally_argv "$@"
+        $bindir/babeltrace_thapi tally --backend <%= languages %> $bt_tally_argv -- "$@"
     fi
 }
 trace_and_summary() {
