--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -107,6 +107,8 @@ sink_plugin = thapi_plugins.filter_map do |plugin|
   plugin.get_sink_component_class_by_name(command) if plugin.name == 'xprof'
 end.first
 
+# Fix segfault
+ARGV.uniq!
 if !$options[:live]
   trace_locations =
     Find.find(*ARGV).reject do |path|
