--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -52,7 +52,7 @@ display_help() {
     echo "  -t, --trace               Display trace"
     echo "  -l, --timeline            Dump the timeline"
     echo "  -j, --json                Summary will be printed as json"
-    echo "  -m, --mode <mode>         [minimal, default, full]"
+    echo "  -m, --tracing-mode <mode> [minimal, default, full]"
     echo "  --asm                     Dump in your current directory low level kernels informations (asm, isa, visa, ...)."
     echo "  --mangle                  Use mangled name"
     echo "  --metadata                Display metadata"
@@ -119,7 +119,7 @@ thapi_export() {
     fi
 }
 
-get_mpi_rank() {
+get_mpi_rankid() {
     # Get the RankID from different launcher
     if [[ -v MPI_RANKID ]]; then
         echo $MPI_RANKID
@@ -130,25 +130,68 @@ get_mpi_rank() {
     fi
 }
 
-bt2_all() {
-    # Note that the $@ are not quoted!
-    if [ -n "$trace" ]; then
-        $bindir/babeltrace_thapi --backend <%= languages %> -r -c $@
-    fi
+enable_events_omp() {
+    thapi_export LTTNG_UST_OMP_INTEL 1
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ompt:*target*
+}
 
-    if [ -n "$timeline" ]; then
-        $bindir/babeltrace_thapi timeline --backend <%= languages %> $@
-    fi
+enable_events_cl() {
+    opencl_disable_events="lttng_ust_opencl:clSetKernelArg*,lttng_ust_opencl:clGetKernelArg*,"
+    opencl_disable_events+="lttng_ust_opencl:clSetKernelExecInfo*,lttng_ust_opencl:clGetKernelInfo*,"
+    opencl_disable_events+="lttng_ust_opencl:clGetMemAllocInfoINTEL*"
 
-    if [ -z "$timeline" ] && [ -z "$trace" ]; then
-        $bindir/babeltrace_thapi tally --backend <%= languages %> $bt_tally_argv -- $@
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl:* -x ${opencl_disable_events}
+    if [ $tracing_mode = "full" ]; then
+        lttng $quiet enable-event --channel=blocking-channel --userspace ${opencl_disable_events}
+    fi
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl_build:infos*
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl_profiling:*
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl_arguments:kernel_info
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl_devices:*
+}
+
+enable_events_ze() {
+    export LTTNG_UST_ZE_PROFILE=1
+    thapi_export LTTNG_UST_ZE_PARANOID_DRIFT 1
+
+    if [ $tracing_mode = "minimal" ]; then
+        lttng $quiet enable-event --channel=blocking-channel --userspace $(cat $datadir/babeltrace_zeprofiling_apis.txt)
+        lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_properties:device_timer
+    else
+        lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_build:log*
+        lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_profiling:*
+
+        ze_disable_properties="lttng_ust_ze_properties:memory_info_properties,lttng_ust_ze_properties:memory_info_range"
+        ze_disable_events="lttng_ust_ze:zeKernelSetArgumentValue*,lttng_ust_ze:ze*Get*Properties*,lttng_ust_ze:zeKernelGetName"
+        ze_disable_querry="lttng_ust_ze:*QueryStatus"
+        lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_properties:* -x ${ze_disable_properties}
+        lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze:* -x ${ze_disable_events},${ze_disable_querry}
+
+        if [ $tracing_mode = "full" ]; then
+            lttng $quiet enable-event --channel=blocking-channel --userspace ${ze_disable_events}
+            lttng $quiet enable-event --channel=blocking-channel --userspace ${ze_disable_properties}
+            lttng $quiet enable-event --channel=blocking-channel --userspace ${ze_disable_querry}
+        fi
     fi
 }
+
+enable_events_cuda() {
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_cuda:*
+    export LTTNG_UST_CUDA_PROFILE=1
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_cuda_profiling:*
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_cuda_properties:*
+}
+
+enable_events_metadata() {
+    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_thapi:*
+}
+
 trace_and_summary() {
     if [ "$#" -eq 0 ]; then
         display_help
     fi
-    MPI_RANK=$(get_mpi_rank)
+
+    MPI_RANK=get_mpi_rankid
 
     THAPI_OUTPUT=${LTTNG_HOME:-$HOME}
     mkdir -p $THAPI_OUTPUT
@@ -180,70 +223,31 @@ trace_and_summary() {
         lttng $quiet create THAPI_$MPI_RANK -o $THAPI_OUTPUT_TMP/$MPI_RANK
     fi
 
+    #Preventing trace event record loss
+    export LTTNG_UST_ALLOW_BLOCKING=1
     lttng $quiet enable-channel --userspace --blocking-timeout=inf blocking-channel
+
 <% if languages.include?("omp") %>
-    thapi_export LTTNG_UST_OMP_INTEL 1
-    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ompt:*target*
+    enable_events_omp()
 <% end %>
 <% if languages.include?("cl") %>
-    opencl_disable_events="lttng_ust_opencl:clSetKernelArg*,lttng_ust_opencl:clGetKernelArg*,"
-    opencl_disable_events+="lttng_ust_opencl:clSetKernelExecInfo*,lttng_ust_opencl:clGetKernelInfo*,"
-    opencl_disable_events+="lttng_ust_opencl:clGetMemAllocInfoINTEL*"
-
-    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl:* -x ${opencl_disable_events}
-    if [ $mode = "full" ]; then
-        lttng $quiet enable-event --channel=blocking-channel --userspace ${opencl_disable_events}
-    fi
-    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl_build:infos*
-    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl_profiling:*
-    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl_arguments:kernel_info
-    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_opencl_devices:*
+    enable_events_cl()
 <% end %>
 <% if languages.include?("ze") %>
-
-    export LTTNG_UST_ZE_PROFILE=1
-    thapi_export LTTNG_UST_ZE_PARANOID_DRIFT 1
-
-    if [ $mode = "minimal" ]; then
-        lttng $quiet enable-event --channel=blocking-channel --userspace $(cat $datadir/babeltrace_zeprofiling_apis.txt)
-        lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_properties:device_timer
-    else
-        lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_build:log*
-        lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_profiling:*
-
-        ze_disable_properties="lttng_ust_ze_properties:memory_info_properties,lttng_ust_ze_properties:memory_info_range"
-        ze_disable_events="lttng_ust_ze:zeKernelSetArgumentValue*,lttng_ust_ze:ze*Get*Properties*,lttng_ust_ze:zeKernelGetName"
-        ze_disable_querry="lttng_ust_ze:*QueryStatus"
-        lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_properties:* -x ${ze_disable_properties}
-        lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze:* -x ${ze_disable_events},${ze_disable_querry}
-
-        if [ $mode = "full" ]; then
-            lttng $quiet enable-event --channel=blocking-channel --userspace ${ze_disable_events}
-            lttng $quiet enable-event --channel=blocking-channel --userspace ${ze_disable_properties}
-            lttng $quiet enable-event --channel=blocking-channel --userspace ${ze_disable_querry}
-        fi
-    fi
+    enable_events_ze()
 <% end %>
 <% if languages.include?("cuda") %>
-    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_cuda:*
-    export LTTNG_UST_CUDA_PROFILE=1
-    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_cuda_profiling:*
-    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_cuda_properties:*
+    enable_events_cuda()
 <% end %>
-    # Add thapi metadata
-    lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_thapi:*
+    enable_events_metadata()
+
 
     #Add vpid/vtid to avoid race condition
     lttng $quiet add-context --userspace --channel=blocking-channel -t vpid -t vtid
 
-    #Preventing trace event record loss
-    export LTTNG_UST_ALLOW_BLOCKING=1
-
     #Find libs and preload
 <% if languages.include?("omp") %>
-    if [ -z "$OMP_TOOL_LIBRARIES" ]; then
-        export OMP_TOOL_LIBRARIES=$libdir/libTracerOMPT.so
-    fi
+   thapi_export(OMP_TOOL_LIBRARIES, $libdir/libTracerOMPT.so)
 <% end %>
 <% if languages.include?("cl") %>
 <%= print_loader_logic("cl","libOpenCL","libTracerOpenCL")%>
@@ -271,8 +275,8 @@ trace_epilogue() {
     if [ $MPI_RANK = -1 ]; then
         lttng $quiet stop THAPI
         lttng $quiet destroy THAPI
-	summary
-	return
+        summary
+        return
     fi
 
     lttng $quiet stop THAPI_$MPI_RANK
@@ -298,7 +302,26 @@ trace_epilogue() {
 }
 
 
+bt2_all() {
+    # Note that the $@ are not quoted!
+    if [ -n "$trace" ]; then
+        $bindir/babeltrace_thapi --backend <%= languages %> -r -c $@
+    fi
+
+    if [ -n "$timeline" ]; then
+        $bindir/babeltrace_thapi timeline --backend <%= languages %> $@
+    fi
+
+    if [ -z "$timeline" ] && [ -z "$trace" ]; then
+        $bindir/babeltrace_thapi tally --backend <%= languages %> $bt_tally_argv -- $@
+    fi
+}
+
 summary() {
+    if [[ ${procesing_mode} == "save" ]]; then
+      return
+    fi
+
     if [ -n "$THAPI_LTTNG_O" ]; then
         lttng_last_session=$THAPI_LTTNG_O
         >&2 echo "Trace location:" $lttng_last_session
@@ -335,7 +358,9 @@ summary() {
 # |_) _. ._ _ o ._   _     /\  ._ _
 # |  (_| | _> | | | (_|   /--\ | (_| \/
 #                    _|           _|
-mode=default
+tracing_mode="default"
+procesing_mode="on-the-fly"
+
 
 if [ "$#" -eq 0 ]; then
     display_help
@@ -353,9 +378,10 @@ while (( "$#" )); do
         -t | --trace)           shift; trace=true ;;
         -l | --timeline)        shift; timeline=true ;;
         -j | --json)            shift; bt_tally_argv+=" --display_mode=json" ;;
-        -m | --mode)            shift; mode=$1; shift ;;
-	--traced-ranks)		shift; traced_ranks=$1; shift ;;
-	--asm)                  shift; asm=true ;;
+        -m | --tracing-mode)    shift; tracing_mode=$1; shift ;;
+        --save)                 shift; procesing_mode="save" ;;
+        --traced-ranks)         shift; traced_ranks=$1; shift ;;
+        --asm)                  shift; asm=true ;;
         --metadata)             shift; bt_tally_argv+=" --display_metadata=true" ;;
         --max-name-size)        shift; bt_tally_argv+=" --display_name_max_size=$1"; shift ;;
         --mangle)               shift; bt_tally_argv+=" --mangling=mangle" ;;
